# horsql

./: README.md  demo.py  pyproject.toml
horsql/: __init__.py  common.py  database.py  operators.py  query_builder.py  where_builder.py
