[project]
name = "horsql"
version = "0.1.1"
description = "Add your description here"
authors = [
    { name = "Wilian", email = "wilianzilv@gmail.com" }
]
dependencies = [
    "SQLAlchemy>=2.0.21",
    "pandas>=1.3.5",
    "psycopg2-binary==2.9.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.25.2",
]

[tool.hatch.metadata]
allow-direct-references = true
