[project]
name = "horsql"
version = "0.1.20"
description = "An experimental SQL ORM that operates with Pandas DataFrames, offering the flexibility of dynamic querying without the need for model or schema definitions."
authors = [
    { name = "Wilian", email = "wilianzilv@gmail.com" }
]
dependencies = [
    "SQLAlchemy>=2.0.21",
    "pandas>=1.3.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.25.2",
    "psycopg2-binary>=2.9.9",
    "mysqlclient>=2.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true
